# Dazzle-Cartesi

./: .gitignore  README.md
cartesi-dapp/: .gitignore  Makefile  README.md  dapp.json  docker-bake.override.hcl  docker-compose-testnet.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
cartesi-dapp/scripts/: .env_develop
server/: .gitignore  Cargo.toml  Makefile
server/domain/: .gitignore  Cargo.toml
server/domain/src/: lib.rs
server/domain/src/cartesi/: mod.rs
server/domain/src/game_core/: board.rs  character.rs  config.rs  event_module.rs  game.rs  mod.rs  probability_mod.rs  reward.rs  room_manager.rs  skill.rs  users.rs
server/domain/src/game_core/character_mod/: accessory_module.rs  art_assets_count.rs  attribute.rs  base_body_module.rs  char_const.rs  mod.rs  validate_simulator.rs
server/domain/src/game_core/config/: asset_amount.json  char_game_init_status.json  damage_formula_coef.json  default_char_attributes.json  element_base_info.json  energy_charge_info.json  event_condition.json  event_info_table.json  skill_param_table.json
server/domain/src/game_core/test_board/: 18_combo.json  all_same_color.json  complex_pattern.json
